--- a/styles/print-barcodes.css
+++ b/styles/print-barcodes.css
@@ -81,7 +81,7 @@
     justify-content: flex-start !important;
     height: 21.1mm !important;
     width: 100% !important;
-    gap: 2mm !important;
+    gap: 0 !important;
     page-break-inside: avoid !important;
   }
   
@@ -139,9 +139,9 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    gap: 2mm;
+    gap: 0;
     width: 100%;
-    margin-bottom: 2mm;
+    margin-bottom: 0;
   }
   
   .barcode-placeholder {
